--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,14 +60,17 @@ jobs:
         with:
           name: pkg-linux-amd64
       - run: chmod a+x pkg-linux-amd64
-      - uses: docker/build-push-action@v1
+      - name: Login to Dockerhub
+        uses: docker/login-action@v1
         with:
-          repository: ${{ github.repository }}
-          tag_with_ref: true
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-        env:
-          DOCKER_BUILDKIT: 1
+      - name: Build and Push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: aheusserkollective/kentik_pkg:latest
     needs: build
 
   release:
